examples/should_pass/borrow-binding.anvil
proc concurrent() {
    reg r : logic;
    loop {
        set r := 1'b1 >>
        set r := 1'b0 >>
        (
            let rv = *r;
            dprint "Value = %d" (rv)
        )
    }
}
