examples/should_fail/bad-borrow-binding.anvil
proc concurrent() =
    reg r : logic
    loop {
        set r := 1'b1 =>
        let rv = *r in
        set r := 1'b0 =>
        dprint "Value = %d" (rv)
    }
